--- a/packages/esm-patient-labs-app/src/lab-orders/lab-order-basket-panel/order-basket-item-tile.scss
+++ b/packages/esm-patient-labs-app/src/lab-orders/lab-order-basket-panel/order-basket-item-tile.scss
@@ -17,7 +17,7 @@
   }
 
   &:nth-child(odd) {
-    background-color: $ui-01;
+    background-color: $ui-02;
   }
 }
 
